XWIKI-11460: Allow filesystem skins to indicate a base skin * use new skin manager

--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -741,6 +741,7 @@
               **/internal/skin/*.java,
               **/internal/template/Template.java,
               **/internal/template/TemplateContent.java,
+              **/internal/template/TemplateEnvironmentResource.java,
               **/internal/template/TemplateScriptService.java,
               **/internal/template/TemplateManager.java,
               **/monitor/api/MonitorData.java,
