--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -41,13 +41,13 @@
     <webjar.contentDirectory>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</webjar.contentDirectory>
   </properties>
   <dependencies>
-    <!-- Adds an Annotation Processor to automatically verify components.txt files.
+    <!-- Adds an Annotation Processor to automatically verify Component declarations.
          Note that we need to add this dependency because the Maven Compiler Plugin doesn't support
          having a plugin dependency. Thus we need it as a normal dependency and in order to avoid drawing it
          transitively we defined it as a "provided" dependency -->
     <dependency>
       <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-tool-component-generation</artifactId>
+      <artifactId>xwiki-commons-tool-verification-resources</artifactId>
       <version>${commons.version}</version>
       <scope>provided</scope>
     </dependency>
