--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1630,13 +1630,11 @@ rendering.macro.include.parameter.context.description=defines whether the includ
 rendering.macro.include.parameter.context.value.NEW=New
 rendering.macro.include.parameter.context.value.CURRENT=Current
 rendering.macro.include.parameter.document.name=document
-rendering.macro.include.parameter.document.description=the name of the document to include
-rendering.macro.display.name=Display
-rendering.macro.display.description=Display other pages into the current page.
-rendering.macro.display.parameter.reference.name=reference
-rendering.macro.display.parameter.reference.description=The reference of the resource to display.
-rendering.macro.display.parameter.type.name=type
-rendering.macro.display.parameter.type.description=The type of the reference.
+rendering.macro.include.parameter.document.description=the name of the document to include.
+rendering.macro.include.parameter.reference.name=reference
+rendering.macro.include.parameter.reference.description=The reference of the resource to include.
+rendering.macro.include.parameter.type.name=type
+rendering.macro.include.parameter.type.description=The type of the reference.
 rendering.macro.include.parameter.type.value.WIKI=Wiki
 rendering.macro.include.parameter.type.value.SPACE=Space
 rendering.macro.include.parameter.type.value.DOCUMENT=Document
@@ -1645,6 +1643,22 @@ rendering.macro.include.parameter.type.value.OBJECT=Object
 rendering.macro.include.parameter.type.value.OBJECT_PROPERTY=Object property
 rendering.macro.include.parameter.type.value.CLASS_PROPERTY=Class property
 rendering.macro.include.parameter.type.value.BLOCK=Block
+rendering.macro.include.parameter.section.name=section
+rendering.macro.include.parameter.section.description=An optional id of a section to include in the specified document.
+rendering.macro.display.name=Display
+rendering.macro.display.description=Display other pages into the current page.
+rendering.macro.display.parameter.reference.name=reference
+rendering.macro.display.parameter.reference.description=The reference of the resource to display.
+rendering.macro.display.parameter.type.name=type
+rendering.macro.display.parameter.type.description=The type of the reference.
+rendering.macro.display.parameter.type.value.WIKI=Wiki
+rendering.macro.display.parameter.type.value.SPACE=Space
+rendering.macro.display.parameter.type.value.DOCUMENT=Document
+rendering.macro.display.parameter.type.value.ATTACHMENT=Attachment
+rendering.macro.display.parameter.type.value.OBJECT=Object
+rendering.macro.display.parameter.type.value.OBJECT_PROPERTY=Object property
+rendering.macro.display.parameter.type.value.CLASS_PROPERTY=Class property
+rendering.macro.display.parameter.type.value.BLOCK=Block
 rendering.macro.display.parameter.section.name=section
 rendering.macro.display.parameter.section.description=An optional id of a section to include in the specified document.
 rendering.macro.rss.name=RSS
