XWIKI-11262: Capitalize "Extensions Manager" options from Administration

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2143,11 +2143,11 @@ admin.export.description=Export wiki pages into a XAR.
 admin.templates=Templates
 admin.templates.description=Settings for the creation of document templates.
 
-admin.xwiki.addextensions=Add extensions
+admin.xwiki.addextensions=Add Extensions
 admin.xwiki.addextensions.description=Search for new extensions to add to the wiki.
-admin.xwiki.installedextensions=Installed extensions
+admin.xwiki.installedextensions=Installed Extensions
 admin.xwiki.installedextensions.description=See the list of already installed extensions, which you can upgrade or uninstall.
-admin.xwiki.coreextensions=Core extensions
+admin.xwiki.coreextensions=Core Extensions
 admin.xwiki.coreextensions.description=See what extensions make up the core of XWiki.
 admin.xwiki.extensionupdater=Extension Updater
 admin.xwiki.extensionupdater.description=Check if there are any updates available for the installed extensions.
