XWIKI-11275: Capitalize the "Job Scheduler" actions

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2957,15 +2957,15 @@ xe.scheduler.welcome=Welcome to the Job scheduler. This application allows you t
 xe.scheduler.jobs.list=List of existing jobs
 xe.scheduler.jobs.actions=Actions
 xe.scheduler.jobs.actions.access=Access:
-xe.scheduler.jobs.actions.view=view
-xe.scheduler.jobs.actions.edit=edit
+xe.scheduler.jobs.actions.view=View
+xe.scheduler.jobs.actions.edit=Edit
 xe.scheduler.jobs.actions.manage=Manage:
-xe.scheduler.jobs.actions.schedule=schedule
-xe.scheduler.jobs.actions.pause=pause
-xe.scheduler.jobs.actions.unschedule=unschedule
-xe.scheduler.jobs.actions.resume=resume
-xe.scheduler.jobs.actions.delete=delete
-xe.scheduler.jobs.actions.trigger=trigger
+xe.scheduler.jobs.actions.schedule=Schedule
+xe.scheduler.jobs.actions.pause=Pause
+xe.scheduler.jobs.actions.unschedule=Unschedule
+xe.scheduler.jobs.actions.resume=Resume
+xe.scheduler.jobs.actions.delete=Delete
+xe.scheduler.jobs.actions.trigger=Trigger
 xe.scheduler.jobs.next=Next fire time
 xe.scheduler.jobs.next.undefined=N/A
 xe.scheduler.jobs.status=Job Status
