XWIKI-11278: Capitalize the "Job scheduler" on "Job Scheduler" app description

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2953,7 +2953,7 @@ xe.scheduler.resumed=Job {0} resumed. Next fire time: {1}
 xe.scheduler.unscheduled=Job {0} unscheduled
 xe.scheduler.triggered=Job {0} triggered
 xe.scheduler=Job Scheduler
-xe.scheduler.welcome=Welcome to the Job scheduler. This application allows you to create administration scripts that can be triggered periodically.
+xe.scheduler.welcome=Welcome to the Job Scheduler. This application allows you to create administration scripts that can be triggered periodically.
 xe.scheduler.jobs.list=List of existing jobs
 xe.scheduler.jobs.actions=Actions
 xe.scheduler.jobs.actions.access=Access:
