--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2966,7 +2966,7 @@ xe.scheduler.jobs.actions.unschedule=unschedule
 xe.scheduler.jobs.actions.resume=resume
 xe.scheduler.jobs.actions.delete=delete
 xe.scheduler.jobs.actions.trigger=trigger
-xe.scheduler.jobs.next=Next fire time
+xe.scheduler.jobs.next=Next Fire Time
 xe.scheduler.jobs.next.undefined=N/A
 xe.scheduler.jobs.status=Job Status
 xe.scheduler.jobs.name=Job Name
