XWIKI-11276: Capitalize the "Next fire time" from "List of existing jobs" table

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2966,7 +2966,7 @@ xe.scheduler.jobs.actions.unschedule=Unschedule
 xe.scheduler.jobs.actions.resume=Resume
 xe.scheduler.jobs.actions.delete=Delete
 xe.scheduler.jobs.actions.trigger=Trigger
-xe.scheduler.jobs.next=Next fire time
+xe.scheduler.jobs.next=Next Fire Time
 xe.scheduler.jobs.next.undefined=N/A
 xe.scheduler.jobs.status=Job Status
 xe.scheduler.jobs.name=Job Name
