XWIKI-11465: Add a parameter to the document tree to hide/show the entities for which the current user doesn't have view right * Add missing dependency.

--- a/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-ui/pom.xml
@@ -80,5 +80,12 @@
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
+    <!-- Used to check access rights for tree nodes. -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-security-script</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
