XWIKI-10226: SOLR REST API when using embedded SOLR

--- a/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/pom.xml
@@ -96,6 +96,7 @@
     <module>xwiki-platform-search-solr-api</module>
     <module>xwiki-platform-search-solr-plugin</module>
     <module>xwiki-platform-search-solr-query</module>
+    <module>xwiki-platform-search-solr-rest</module>
     <module>xwiki-platform-search-solr-ui</module>
   </modules>
 </project>
