--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -345,6 +345,12 @@
           -->
           <ignored>
             <!-- Remove the following ignores after we release the current version as final -->
+            <difference>
+              <differenceType>7004</differenceType>
+              <className>org/xwiki/mail/XWikiAuthenticator</className>
+              <method>XWikiAuthenticator(org.xwiki.mail.MailSenderConfiguration)</method>
+              <justification>Young API. Change required to fix sending mail with authenticating SMTP servers</justification>
+            </difference>
           </ignored>
           <excludes>
             <exclude>**/internal/**</exclude>
