--- a/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/pom.xml
@@ -34,6 +34,7 @@
   <modules>
     <module>xwiki-platform-mail-send-api</module>
     <module>xwiki-platform-mail-send-default</module>
+    <module>xwiki-platform-mail-send-batch</module>
   </modules>
   <profiles>
     <profile>
