XWIKI-11507 : Integrate the ratings system from xwiki-contrib - created new xwiki-platform-ratings module - prefixed the modules from xwiki-contrib with 'xwiki-platform-ratings-' - changed main pom parent from 'xwiki-commons-pom' to 'xwiki-platform-core' - changed the artifact id from 'application-ratings' to 'xwiki-platform-ratings' - changed package name from 'org.xwiki.contrib.ratings' to 'org.xwiki.ratings'

--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -529,6 +529,7 @@
     <module>xwiki-platform-oldcore</module>
     <module>xwiki-platform-panels</module>
     <module>xwiki-platform-query</module>
+    <module>xwiki-platform-ratings</module>
     <module>xwiki-platform-refactoring</module>
     <module>xwiki-platform-release</module>
     <module>xwiki-platform-rendering</module>
