--- a/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/pom.xml
@@ -32,9 +32,10 @@
   <name>XWiki Platform - Mail - Send - Parent POM</name>
   <description>XWiki Platform - Mail - Send - Parent POM</description>
   <modules>
+    <!-- Sorted Alphabetically -->
     <module>xwiki-platform-mail-send-api</module>
-    <module>xwiki-platform-mail-send-default</module>
     <module>xwiki-platform-mail-send-batch</module>
+    <module>xwiki-platform-mail-send-default</module>
   </modules>
   <profiles>
     <profile>
