XWIKI-11361: Set of icons by default in AWM.
* Update the hint.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2781,7 +2781,7 @@ platform.appwithinminutes.liveTableEditorDeleteColumnHint=Delete
 platform.appwithinminutes.liveTableEditorAddColumnHint=Add
 platform.appwithinminutes.liveTableEditorDeprecatedColumnsWarning=Some columns are deprecated, probably because the corresponding class fields have been deleted. Do you wish to remove them? <a href="">Yes</a> / <a href="">No</a>
 platform.appwithinminutes.liveTableEditorIcon=Icon
-platform.appwithinminutes.liveTableEditorIconHint=You need to provide a reference to a 16x16px icon, you can pick a name from our <a href="{0}" target="_blank">default icons set</a> and use the **icon:** prefix. For example: **icon:application**.
+platform.appwithinminutes.liveTableEditorIconHintWithPicker=A reference to an icon. It could be any image stored in the wiki but you can also pick an icon from the picker displayed when the field have focus.
 
 ### Application home page
 platform.appwithinminutes.appLiveTableHeading=Entries
@@ -4839,6 +4839,11 @@ viewhistorytitle=History of <em>$doc.displayTitle</em>
 viewinformationtitle=Information about <em>$doc.displayTitle</em>
 editgroupsredirect=You can currently edit groups using the wiki on <a href="$xwiki.getURL("XWiki.XWikiGroups")">the groups page</a>.
 editusersredirect=You can currently edit users using the wiki on <a href="$xwiki.getURL("XWiki.XWikiUsers")">the users page</a>.
+
+#######################################
+## until 6.4M2
+#######################################
+platform.appwithinminutes.liveTableEditorIconHint=You need to provide a reference to a 16x16px icon, you can pick a name from our <a href="{0}" target="_blank">default icons set</a> and use the **icon:** prefix. For example: **icon:application**.
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
