--- a/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-api/pom.xml
@@ -48,5 +48,10 @@
       <artifactId>xwiki-commons-stability</artifactId>
       <version>${commons.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
