--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/pom.xml
@@ -80,6 +80,7 @@
         <executions>
           <execution>
             <id>copy-webjar-resources</id>
+            <phase>validate</phase>
           </execution>
         </executions>
       </plugin>
@@ -89,6 +90,7 @@
         <executions>
           <execution>
             <id>minify-webjar-resources</id>
+            <phase>process-resources</phase>
           </execution>
         </executions>
       </plugin>
