--- a/xwiki-platform-core/xwiki-platform-job/xwiki-platform-job-webjar/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-job/xwiki-platform-job-webjar/pom.xml
@@ -46,6 +46,10 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>com.cj.jshintmojo</groupId>
+        <artifactId>jshint-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
         <artifactId>maven-resources-plugin</artifactId>
         <executions>
           <execution>
