--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/pom.xml
@@ -58,6 +58,13 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>com.cj.jshintmojo</groupId>
+        <artifactId>jshint-maven-plugin</artifactId>
+        <configuration>
+          <options>laxbreak,expr</options>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.lesscss</groupId>
         <artifactId>lesscss-maven-plugin</artifactId>
         <version>1.7.0.1.1</version>
