XWIKI-11543: Integration of requirejs should be provided through a dependency on its WebJar * Remove the require.js file bundled with xwiki-platform-web * Modify javascript.vm (both in platform-web and flamingo-skin) to load RequireJS as webjar * Declare dependencies to RequireJS and JQuery webjars.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-theme/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-theme/pom.xml
@@ -40,15 +40,23 @@
   <dependencies>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-webjars</artifactId>
+      <artifactId>xwiki-platform-icon-script</artifactId>
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-icon-script</artifactId>
+      <artifactId>xwiki-platform-webjars</artifactId>
       <version>${project.version}</version>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>requirejs</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
