--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -231,6 +231,12 @@
       <!-- Common WebJars -->
       <dependency>
         <groupId>org.webjars</groupId>
+        <artifactId>requirejs</artifactId>
+        <version>2.1.15</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.webjars</groupId>
         <artifactId>jquery</artifactId>
         <version>1.11.1</version>
         <scope>runtime</scope>
