--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/pom.xml
@@ -56,6 +56,14 @@
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
+      <artifactId>requirejs</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
       <artifactId>bootstrap</artifactId>
       <version>${bootstrap.version}</version>
       <scope>runtime</scope>
