--- a/xwiki-platform-core/xwiki-platform-job/xwiki-platform-job-webjar/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-job/xwiki-platform-job-webjar/pom.xml
@@ -40,6 +40,10 @@
   <dependencies>
     <dependency>
       <groupId>org.webjars</groupId>
+      <artifactId>requirejs</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
     </dependency>
   </dependencies>
