--- a/xwiki-platform-core/xwiki-platform-panels/xwiki-platform-panels-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-panels/xwiki-platform-panels-ui/pom.xml
@@ -67,6 +67,15 @@
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
+    <!-- JavaScript dependencies -->
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>requirejs</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>jquery-ui</artifactId>
