XWIKI-11508 : Include ratings information in the Extension REST API - populate the REST resource with information regarding ratings

--- a/xwiki-platform-core/xwiki-platform-repository/xwiki-platform-repository-server-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-repository/xwiki-platform-repository-server-api/pom.xml
@@ -55,6 +55,11 @@
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-ratings-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-rest-server</artifactId>
       <version>${project.version}</version>
     </dependency>
