--- a/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-ui/pom.xml
@@ -32,7 +32,7 @@
   <artifactId>xwiki-platform-filter-ui</artifactId>
   <name>XWiki Platform - Filter - UI</name>
   <packaging>xar</packaging>
-  <description>XWiki Filter, an application for manipulating Filter modules.</description>
+  <description>Provide a generic UI to convert from a XWiki Filter input stream to an output stream with settings for each stream.</description>
   <properties>
     <!-- Don't run CLIRR here since there's no Java code. -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
@@ -40,7 +40,7 @@
     <xwiki.extension.features>org.xwiki.platform:xwiki-platform-filter-ui</xwiki.extension.features>
 
     <!-- Name to display by the Extension Manager -->
-    <xwiki.extension.name>Filter Application</xwiki.extension.name>
+    <xwiki.extension.name>Sream Converter Application</xwiki.extension.name>
   </properties>
   <dependencies>
     <dependency>
