--- a/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-test/pom.xml
@@ -24,25 +24,20 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
+    <artifactId>xwiki-platform-filter</artifactId>
     <version>6.4-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-filter</artifactId>
+  <artifactId>xwiki-platform-filter-test</artifactId>
+  <name>XWiki Platform - Filter - Tests - Parent POM</name>
   <packaging>pom</packaging>
-  <name>XWiki Platform - Filter</name>
+  <description>Tests for the Filter Application</description>
+  <properties>
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
   <modules>
-    <module>xwiki-platform-filter-events</module>
-    <module>xwiki-platform-filter-streams</module>
-    <module>xwiki-platform-filter-instance</module>
-    <module>xwiki-platform-filter-script</module>
-    <module>xwiki-platform-filter-ui</module>
+    <module>xwiki-platform-filter-test-tests</module>
   </modules>
-  <profiles>
-    <profile>
-      <id>integration-tests</id>
-      <modules>
-        <module>xwiki-platform-filter-test</module>
-      </modules>
-    </profile>
-  </profiles>
 </project>
