XWIKI-11416: Move the "Pretty Name" and Description sections from the Main Wiki to their respective subwiki Administration page - Modified persmission checks in the script service for editing a wiki descriptor. Allowed are: -- Users with edit rights on the descriptor's document (that includes global admins) -- Owner of the wiki coresponding to the descriptor -- Local admins of the wiki coresponding to the descriptor, as long as they do not change the "ownerId" property - Updated and added new tests - Added a 'Wiki' administration section that exposes this UI, under the 'Configuration' category - Packaged this new UI elements in a new UI module that is common to both the main wiki and subwikis and which will be included in XE's common UI.

--- a/xwiki-platform-core/xwiki-platform-wiki/xwiki-platform-wiki-script/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-wiki/xwiki-platform-wiki-script/pom.xml
@@ -40,6 +40,12 @@
       <artifactId>xwiki-platform-wiki-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- Not very clean, but we want to access the document of a descriptor. -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-wiki-default</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-security-api</artifactId>
